- Group view button (not configured)

--- a/TCC/Views/Index.xaml
+++ b/TCC/Views/Index.xaml
@@ -165,6 +165,7 @@
                                 </Frame.GestureRecognizers>
                             </Frame>
 
+                                    <TapGestureRecognizer Tapped="OnEditClicked" />
                             <!-- Botão Fechar/Sair -->
                             <Frame BackgroundColor="#FF0000" 
                                    CornerRadius="20" 
